k8s/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: api-dev
  labels:
    app.kubernetes.io/part-of: marriott-application
    app.kubernetes.io/managed-by: kustomize
    environment: dev
